--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/bfdc174a3a27a02fe24a82d7686ef4b5.js"></script>
   </body>
 </html>
