--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/bfdc174a3a27a02fe24a82d7686ef4b5.js"></script>
+    <script type="text/javascript"
+src="https://onsite.optimonk.com/script.js?account=253785"
+async></script>
   </body>
 </html>
